add CSS styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <input type="text" class="form-control" id="new-last-name">
             </div>
 
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" class="btn btn-info">Add</button>
           </form>
 
           <h2>Contacts:</h2>
